argo/tulip/templates/tulip-api-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tulip-api-strip-prefix
  namespace: tulip
spec:
  stripPrefix:
    prefixes:
      - /api
