argo/tulip/templates/tulip-basic-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tulip-basic-auth
  namespace: tulip
spec:
  basicAuth:
    secret: tulip-basic-auth
    realm: "Protected Area"
    removeHeader: true
