argo/tulip/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.36.0 (ae2a39403)
    org.opencontainers.image.source: https://github.com/tonitert/ad-infra-k3s
  labels:
    io.kompose.service: frontend
  name: frontend
  namespace: tulip
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.36.0 (ae2a39403)
        org.opencontainers.image.source: https://github.com/tonitert/ad-infra-k3s
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: API_SERVER_ENDPOINT
              value: http://api:5000/
            - name: VIRTUAL_HOST
              value: tulip.ad.tertsonen.xyz
          image: ghcr.io/tonitert/ad-infra-k3s/tulip-frontend:latest
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
