argo/tulip/templates/timescale-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.36.0 (ae2a39403)
    org.opencontainers.image.source: https://github.com/tonitert/ad-infra-k3s
  labels:
    io.kompose.service: timescale
  name: timescale
  namespace: tulip
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: timescale
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.36.0 (ae2a39403)
        org.opencontainers.image.source: https://github.com/tonitert/ad-infra-k3s
      labels:
        io.kompose.service: timescale
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: tulip
            - name: POSTGRES_HOST_AUTH_METHOD
              value: trust
            - name: POSTGRES_USER
              value: tulip
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
          image: ghcr.io/tonitert/ad-infra-k3s/tulip-timescale:latest
          name: timescale
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: timescale-data
          resources:
            requests:
              memory: "128m"
              cpu: "50m"
            limits:
              memory: "1024m"
              cpu: "1500m"
      restartPolicy: Always
      volumes:
        - name: timescale-data
          persistentVolumeClaim:
            claimName: timescale-data
