argo/tulip/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    io.kompose.service: api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
