argo/tulip/templates/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: front
  name: front
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: front
