argo/tulip/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.36.0 (ae2a39403)
    org.opencontainers.image.source: https://github.com/tonitert/ad-infra-k3s
  labels:
    io.kompose.service: frontend
  name: frontend
  namespace: tulip
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: frontend
