argo/tulip/templates/timescale-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.36.0 (ae2a39403)
    org.opencontainers.image.source: https://github.com/tonitert/ad-infra-k3s
  name: timescale
  namespace: tulip
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: timescale
