argo/tulip/templates/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tulip-http
  namespace: tulip
spec:
  parentRefs:
    - name: traefik
      sectionName: http
      kind: Gateway
    - name: traefik
      sectionName: https
      kind: Gateway

  hostnames:
    - tulip.ad.tertsonen.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: tulip-basic-auth
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: tulip-api-strip-prefix
      backendRefs:
        - name: api
          port: 5000
    # /
    - matches:
        - path: 
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: tulip-basic-auth
      backendRefs:
        - name: frontend
          port: 3000
